updated download link

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@ title: Commangular
 	<div class="container text-center">
 		<h1>Commangular</h1>
 		<h3>COMMAND FRAMEWORK FOR ANGULARJS</h3>
-		<a href="download/commangular.zip"class="btn btn-default btn-lg" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Button Download Clicked']);"><i class="fa fa-download"></i>Download</a>
+		<a href="https://github.com/yukatan/commangular/raw/master/dist/commangular.zip"class="btn btn-default btn-lg" onclick="_gaq.push(['_trackEvent', 'Outbound Link', 'Button Download Clicked']);"><i class="fa fa-download"></i>Download</a>
 		<div class="showcase-promote">
 			Version 0.5.2 | 
 			<a href="https://github.com/yukatan/commangular" target="_blank">Github Repository</a>
