--- a/app/todomvc/index.html
+++ b/app/todomvc/index.html
@@ -59,11 +59,11 @@
 		<script src="js/app.js"></script>
 		<script src="js/commands-config.js"></script>
 		<script src="js/controllers/todoCtrl.js"></script>
-		<script src="js/services/todoStorage.js"></script>
 		<script src="js/directives/todoFocus.js"></script>
 		<script src="js/directives/todoBlur.js"></script>
 		<script src="js/model/todo-list.js"></script>
 		<script src="js/model/current-todo.js"></script>
+		<script src="js/infrastructure/services/todoStorage.js"></script>
 		<script src="js/infrastructure/commands/add-todo-command.js"></script>
 		<script src="js/infrastructure/commands/save-storage-command.js"></script>
 		<script src="js/infrastructure/commands/load-storage-command.js"></script>
