--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@ title: Commangular
 			<h4 class="title"><i class="fa fa-chain-broken"></i>Reduce Dependencies.</h4><span>Reduce dependencies in services and controllers. Dispatch events and leave commangular and angular binding do the rest.</span>
 		</div>
 		<div class="col-lg-4 col-md-6 col-xs-12 feature">
-			<h4 class="title"><i class="fa fa-random"></i>AOP Like Interception.</h4><span>Intercep command execution with a spring aspects flavour. @Before, @After, @AfterThrowing and @Around.</span>
+			<h4 class="title"><i class="fa fa-random"></i>AOP Like Interception.</h4><span>Intercept command execution with a spring aspects flavour. @Before, @After, @AfterThrowing and @Around.</span>
 		</div>
 		<div class="col-lg-4 col-md-6 col-xs-12 feature">
 			<h4 class="title"><i class="fa fa-thumb-tack"></i>Angular Dependency Injection.</h4><span>Inject anything from angular as you inject in controllers or services.</span>
